# spacecraft-dynamics

./: README.md  pyproject.toml  setup.py
attitude_coordinates/: __init__.py  eulerKinematicEquation.py  mrpKinematicsEquation.py  prv.py
attitude_coordinates/common/: matrixOperations.py
attitude_coordinates/euler_angles/: eulerAngles.py  eulerAnglesRbk.py
attitude_coordinates/prv/: prv.py
attitude_estimation/: __init__.py  estimators.py
attitude_estimation/triad/: triad.py
common/: matrixOperations.py
concept_checks/: __init__.py  attitude_estimators.py  triad_method.py  utils.py
concept_checks/control/: __init__.py  control_simulator.py
concept_checks/control_theory/: control_simulator.py
concept_checks/kinematics/: __init__.py  attitude_estimators.py
concept_checks/kinetics/: __init__.py  kinetic_energy.py  nl_phase_plot.py  system_dynamics.py
concept_checks/nl_control/: __init__.py  control_simulator.py  saturation.py  tuning.py
crp/: crpKinematicsEquation.py
euler_angles/: eulerAngles.py  eulerKinematicEquation.py
euler_params/: ep.py  epKinematicsEquation.py
kinetics/: rigid_body.py  system_properties.py
mrp/: mrp.py
nl_control/: control_estimation.py
prv/: prv.py
spacecraftDynamics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/spacecraftDynamics/: __init__.py
src/spacecraftDynamics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/spacecraftDynamics/attitude_coordinates/: __init__.py  crp.py  ep.py  eulerAngles.py  mrp.py  mrpKinematicsEquation.py  prv.py
utilities/: plot_vector_field.py
(+8 files in other folders)
