[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacecraftDynamics"
version = "0.1.0"
description = "Tools for spacecraft dynamics, kinematics, and control analysis"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Spacecraft Dynamics Contributors"}
]
keywords = ["spacecraft", "dynamics", "kinematics", "attitude", "control"]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "isort>=5.10",
]
science = [
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://gitlab.com/u-space/gnc/spacecraft-dynamics"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["concept_checks"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=src/spacecraftDynamics --cov-report=term-missing"
